--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,77 @@
+@import url('https://fonts.googleapis.com/css2?family=Bungee&family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.bungee {
+  font-family: "Bungee", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.chakra-petch-light {
+  font-family: "Chakra Petch", sans-serif;
+  font-weight: 300;
+  font-style: normal;
+}
+
+.chakra-petch-regular {
+  font-family: "Chakra Petch", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.chakra-petch-medium {
+  font-family: "Chakra Petch", sans-serif;
+  font-weight: 500;
+  font-style: normal;
+}
+
+.chakra-petch-semibold {
+  font-family: "Chakra Petch", sans-serif;
+  font-weight: 600;
+  font-style: normal;
+}
+
+.chakra-petch-bold {
+  font-family: "Chakra Petch", sans-serif;
+  font-weight: 900;
+  font-style: normal;
+}
+
+.chakra-petch-light-italic {
+  font-family: "Chakra Petch", sans-serif;
+  font-weight: 300;
+  font-style: italic;
+}
+
+.chakra-petch-regular-italic {
+  font-family: "Chakra Petch", sans-serif;
+  font-weight: 400;
+  font-style: italic;
+}
+
+.chakra-petch-medium-italic {
+  font-family: "Chakra Petch", sans-serif;
+  font-weight: 500;
+  font-style: italic;
+}
+
+.chakra-petch-semibold-italic {
+  font-family: "Chakra Petch", sans-serif;
+  font-weight: 600;
+  font-style: italic;
+}
+
+.chakra-petch-bold-italic {
+  font-family: "Chakra Petch", sans-serif;
+  font-weight: 700;
+  font-style: italic;
+}
+
+
 
 :root {
   --foreground-rgb: 0, 0, 0;
@@ -16,18 +87,116 @@
   }
 }
 
+::-webkit-scrollbar{
+  display: none;
+}
+::-moz-selection { /* Code for Firefox */
+  color: black;
+  background: white;
+}
+
+::selection {
+  color: black;
+  background: white;
+}
+
+.link-underline-animation {
+  background-size: 0 2px;
+  background-image: linear-gradient(transparent, transparent), linear-gradient(to right, #65B1E0, #65B1E0);
+  background-position: 0 100%;
+  background-repeat: no-repeat;
+  transition: background-size 0.3s ease-in-out;
+}
+
+.link-underline-animation:hover {
+  background-size: 100% 2px;
+}
+
+
+@keyframes shake-y {
+  0%, 100% {
+      transform: translateY(0);
+  }
+  25% {
+      transform: translateY(-5px);
+  }
+  75% {
+      transform: translateY(5px);
+  }
+}
+
+@keyframes shake-x {
+  0%, 100% {
+      transform: translateX(0);
+  }
+  25% {
+      transform: translateX(-2px);
+  }
+  75% {
+      transform: translateX(2px);
+  }
+}
+
+.shakeX {
+  animation: shake-x 0.2s ease-in-out infinite;
+}
+
+.shakeY {
+  animation: shake-y 0.2s ease-in-out infinite;
+}
+
+
+
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment:fixed;
+  background-color:#1d4668;
+  
 }
 
 @layer utilities {
   .text-balance {
     text-wrap: balance;
   }
+}
+.menu-icon {
+  width: 24px;
+  height: 24px;
+  position: relative;
+  cursor: pointer;
+  transition: transform 0.3s ease-in-out;
+}
+
+.menu-icon .line {
+  display: block;
+  width: 100%;
+  height: 2px;
+  background-color: currentColor;
+  position: absolute;
+  transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
+}
+
+.line1 {
+  top: 6px;
+}
+
+.line2 {
+  top: 12px;
+}
+
+.line3 {
+  top: 18px;
+}
+
+.open .line1 {
+  transform: rotate(45deg) translate(5px, 5px);
+}
+
+.open .line2 {
+  opacity: 0;
+}
+
+.open .line3 {
+  transform: rotate(-45deg) translate(5px, -5px);
 }
