--- a/app/globals.css
+++ b/app/globals.css
@@ -3,7 +3,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import "flowbite";
 
+.bg-custom{
+  background-color: #F8E197;
+
+}
 
 .bungee {
   font-family: "Bungee", sans-serif;
@@ -145,6 +150,10 @@
   animation: shake-y 0.2s ease-in-out infinite;
 }
 
+.shakeY-special{
+  animation: shake-y 0.5s ease-in-out infinite;
+  
+}
 
 
 body {
